--- a/praktikum11/build.gradle
+++ b/praktikum11/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation platform('com.google.firebase:firebase-bom:26.2.0')
     implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
 }
