Selesai konfigurasi menu log in

--- a/praktikum14/build.gradle
+++ b/praktikum14/build.gradle
@@ -31,6 +31,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding = true
+        dataBinding = true
+    }
 }
 
 dependencies {
